Update .env_example file for latest changes

--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,6 @@
 # Admin Config
 ADMIN_USER=""
-USER_NAME="admin"
+USER_NAME=""
 USER_PASS=""
 
 # MAIL Setup
@@ -15,22 +15,22 @@ MAIL_USER_NOREPLY=""
 MAIL_USER_CONFIRM="Confirmations"
 MAIL_USER_NOTIFIC="Notifications"
 
-MAIL_USER="Workflow"
-PROJECT_TITLE="Workflow"
-PROJECT_DSCPT_SHORT="Workflow"
-PROJECT_DSCPT="Workflow"
-PROJECT_NAME="workflow"
-PROJECT_SLOG=""
+MAIL_USER="Task Manage"
+PROJECT_TITLE="Task Manage"
+PROJECT_DSCPT_SHORT="Task Manage"
+PROJECT_DSCPT="Task Manage"
+PROJECT_NAME="task_manage"
+PROJECT_SLOG="task_manage"
 PROJECT_HOST="workflow.tech"
 
-COMPANY_NAME="Workflow"
-COMPANY_SHORT_NAME="Workflow"
+COMPANY_NAME="Task Manage"
+COMPANY_SHORT_NAME="Task Manage"
 
 # DB Config
 DB_HOST="localhost"
 DB_USER="root"
 DB_PASS=""
-DB_NAME="workflow"
+DB_NAME=""
 
 # production development staging;
 PROJECT_STATE="development"
@@ -39,6 +39,9 @@ PROJECT_STATE="development"
 SMS_CLIENT_ID=""
 SMS_CLIENT_API=""
 
+### Twitter
+
+##API Key
 
 # Google Analytics
 G_ANALYTIC=""
